<resources>
    <string name="app_name">Udacity Baking Apps</string>
    <string name="recipe_url">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="Steps_Details_Show_Next_Button_Text">Show Steps</string>
    <string name="Steps_Details_Next_Button_Text">Next</string>
    <string name="Steps_Video_URL_key">videoURL</string>
    <string name="Steps_Desc_key">desc</string>
    <string name="Steps_Name_key">name</string>
    <string name="Steps_Recipe_key">recipe</string>
    <string name="Steps_Image_URL_key">imageURL</string>
    <string name="Steps_Positiion_key">position</string>
    <string name="Steps_Ingredients_key">ingredients</string>
    <string name="servings_text">Servings : </string>
    <string name="ingredients_row_text">See all ingredients</string>
    <string name="next_step_button_text">Next Step</string>
    <string name="prev_step_button_text">Prev Step</string>
    <string name="description_header">Step Description</string>
    <string name="no_internet_connection">Try Again</string>
    <string name="widget_header">Let\'s Start Baking</string>
    <string name="no_internet_warning_text">Please chaek your internet connection to watch Video for this step</string>
</resources>
