...
          android:text="@string/description_header"
          android:textStyle="bold"
        />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/step_description"
          android:textSize="@dimen/detail_list_text_size"
          android:layout_marginStart="@dimen/step_fragment_margin_start"
          />
    </LinearLayout>
    <Button
        android:id="@+id/prev_button"
...
